Archive/5696483420f5be7f92b71c040aab25e6-f60995e18ad2fc0ff17ff8c1e6a19e2a/output
+ gcc-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘constexpr bool f(int)’:
main.cpp:5:5: error: non-constant condition for static assertion
     static_assert(__builtin_constant_p(x), "");
     ^
main.cpp:5:5: error: ‘x’ is not a constant expression
